--- a/PRO1041_SD18310_Nhom6/nbproject/private/private.properties
+++ b/PRO1041_SD18310_Nhom6/nbproject/private/private.properties
@@ -2,5 +2,5 @@ compile.on.save=true
 file.reference.mysql-connector-j-8.2.0.jar-1=C:\\Server java\\mysql-connector-j-8.2.0\\mysql-connector-j-8.2.0.jar
 file.reference.mysql-connector-j-8.2.0.jar-2=C:\\Users\\thiet\\Downloads\\mysql-connector-j-8.2.0\\mysql-connector-j-8.2.0\\mysql-connector-j-8.2.0.jar
 file.reference.swingx-1.6.jar=C:\\Server java\\swingx-1.6.jar
-user.properties.file=C:\\Users\\lenovo\\AppData\\Roaming\\NetBeans\\17\\build.properties
+user.properties.file=C:\\Users\\admin\\AppData\\Roaming\\NetBeans\\17\\build.properties
 
