--- a/PRO1041_SD18310_Nhom6/nbproject/private/private.properties
+++ b/PRO1041_SD18310_Nhom6/nbproject/private/private.properties
@@ -1,6 +1,12 @@
 compile.on.save=true
+do.depend=false
+do.jar=true
+do.jlink=false
 file.reference.mysql-connector-j-8.2.0.jar-1=C:\\Server java\\mysql-connector-j-8.2.0\\mysql-connector-j-8.2.0.jar
 file.reference.mysql-connector-j-8.2.0.jar-2=C:\\Users\\thiet\\Downloads\\mysql-connector-j-8.2.0\\mysql-connector-j-8.2.0\\mysql-connector-j-8.2.0.jar
 file.reference.swingx-1.6.jar=C:\\Server java\\swingx-1.6.jar
+javac.debug=true
+javadoc.preview=true
+jlink.strip=false
 user.properties.file=C:\\Users\\lenovo\\AppData\\Roaming\\NetBeans\\17\\build.properties
 
