--- a/PRO1041_SD18310_Nhom6/nbproject/project.properties
+++ b/PRO1041_SD18310_Nhom6/nbproject/project.properties
@@ -51,7 +51,8 @@ javac.classpath=\
     ${file.reference.swingx-1.6.jar-1}:\
     ${file.reference.mysql-connector-j-8.2.0.jar-3}:\
     ${file.reference.timingframework-0.54.jar}:\
-    ${file.reference.swingx-1.6.jar-2}
+    ${file.reference.swingx-1.6.jar-2}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
